reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__view_models.rs_line_654_col_5.log

*** crates/tracewake-core/src/view_models.rs:654:5: replace classify_why_not -> WhyNotFailureKind with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/view_models.rs
+++ replace classify_why_not -> WhyNotFailureKind with Default::default()
@@ -646,71 +646,17 @@
     }
 
     pub fn non_diegetic_marker(&self) -> &'static str {
         DEBUG_EPISTEMICS_MARKER
     }
 }
 
 fn classify_why_not(report: &ValidationReport) -> WhyNotFailureKind {
-    if report.reason_codes.iter().any(|reason| {
-        matches!(
-            reason,
-            ReasonCode::KnowledgePreconditionNotMet
-                | ReasonCode::TargetNotVisible
-                | ReasonCode::TargetNotReachable
-                | ReasonCode::NoCurrentIntention
-                | ReasonCode::IntentionTerminal
-                | ReasonCode::RoutineStepBlocked
-        )
-    }) {
-        return WhyNotFailureKind::ActorKnownUncertainty;
-    }
-    if report.reason_codes.iter().any(|reason| {
-        matches!(
-            reason,
-            ReasonCode::DoorClosedBlocksMovement
-                | ReasonCode::DoorLocked
-                | ReasonCode::ContainerClosed
-                | ReasonCode::ContainerLocked
-                | ReasonCode::DestinationNotOpen
-                | ReasonCode::ActorNotAtRequiredPlace
-        )
-    }) {
-        return WhyNotFailureKind::Access;
-    }
-    if report.reason_codes.iter().any(|reason| {
-        matches!(
-            reason,
-            ReasonCode::TargetReserved | ReasonCode::ReservationConflict
-        )
-    }) {
-        return WhyNotFailureKind::ReservationOrBodyConstraint;
-    }
-    if report.reason_codes.iter().any(|reason| {
-        matches!(
-            reason,
-            ReasonCode::InvalidParameter
-                | ReasonCode::ControllerUnbound
-                | ReasonCode::ControllerActorMismatch
-        )
-    }) {
-        return WhyNotFailureKind::AuthoredContentInvalidity;
-    }
-    if report.reason_codes.iter().any(|reason| {
-        matches!(
-            reason,
-            ReasonCode::UnknownActionId
-                | ReasonCode::PhaseUnsupportedAction
-                | ReasonCode::UnsupportedTargetKind
-        )
-    }) {
-        return WhyNotFailureKind::UnsupportedAction;
-    }
-    WhyNotFailureKind::GroundTruthValidationFailure
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 #[derive(Clone, Debug, PartialEq, Eq, PartialOrd, Ord)]
 pub struct DebugHolderBeliefs {
     pub holder_actor_id: ActorId,
     pub beliefs: Vec<DebugBeliefEntry>,
 }
 


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/view_models.rs` has changed (1781905853.291925323s, 3s after last build at 1781905850.363925266s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `WhyNotFailureKind: Default` is not satisfied
   --> crates/tracewake-core/src/view_models.rs:654:5
    |
654 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `WhyNotFailureKind`
   --> crates/tracewake-core/src/view_models.rs:68:1
    |
 68 | pub enum WhyNotFailureKind {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `view_models::WhyNotFailureKind: Default` is not satisfied
   --> crates/tracewake-core/src/view_models.rs:654:5
    |
654 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `view_models::WhyNotFailureKind`
   --> crates/tracewake-core/src/view_models.rs:68:1
    |
 68 | pub enum WhyNotFailureKind {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
